Fixed "home" icon

--- a/NotAnotherAnimeThemeSCSL.theme.css
+++ b/NotAnotherAnimeThemeSCSL.theme.css
@@ -23,13 +23,17 @@
 
 /* Edit this to change your friends icon picture */
 /* If you don't want a custom friends icon just delete this small section of code */
-.guilds-wrapper .guilds .friends-icon {
-    background-image: url(https://s-media-cache-ak0.pinimg.com/originals/26/64/b5/2664b58e5882ff735aef9019d7f2bd3e.jpg); /* The URL of the friends icon image you want */
+.guilds-wrapper .guilds .home-icon {
+    -webkit-box-sizing: border-box; /* No need to edit this */
+    box-sizing: border-box; /* No need to edit this */
+    color: rgba(255, 255, 255, 0); /* DON'T TOUCH THIS */
+    background: url(https://s-media-cache-ak0.pinimg.com/originals/26/64/b5/2664b58e5882ff735aef9019d7f2bd3e.jpg); /* The URL of the friends icon image you want */
+    height: 100%; /* No need to edit this */
+    padding: 0px; /* No need to edit this */
     background-position: top left; /* This is the section of the image that you want to use, for exmaple this is using the top left of the image, you would probably want to change this to center or top center */
     background-repeat: no-repeat; /* No need to edit this */
+    width: 100%; /* No need to edit this */
     background-size: 230%; /* This is how zoomed in your image will be, change this back to 100% and increase or decrease as needed */
-    height: 50px; /* No need to edit this */
-    width: 50px; /* No need to edit this */
 }
 
 
@@ -78,7 +82,5 @@
 
 
 /* ADD CODE BELOW TO CUSTOMIZE THE THEME */
-
-
 
 
