--- a/css/scsl.css
+++ b/css/scsl.css
@@ -667,3 +667,7 @@
 .theme-dark .isMentioned-N-h9aa {
     background: rgba(58, 113, 193, 0.15) !important;
 }
+
+.theme-dark .guildsWrapper-5TJh6A {
+    background-color: rgba(0, 0, 0, 0.8);
+}
