--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -639,5 +639,5 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .guild-1EfMGQ.unread-qLkInr:before {
-    background: #a900ff !important;
+    background: #a900ff;
 }
