--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -552,9 +552,9 @@ div.unread-mentions-indicator-bottom {
     align-content: flex-start;
 }
 
-.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ {
-	margin-left: 8px;
-    margin-top: 8px;
+.dms-rcsEnV.da-dms .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ {
+	margin-left: 8px !important;
+    margin-top: 8px !important;
 }
 
 .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ.unread-qLkInr::before {
@@ -563,9 +563,8 @@ div.unread-mentions-indicator-bottom {
     z-index:9000;
 }
 
-.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:first-child {
+.dms-rcsEnV.da-dms .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:first-child {
     position: relative; 
-    margin: auto;
 }
 
 #bd-pub-li {
