--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -550,15 +550,20 @@ div.unread-mentions-indicator-bottom {
     align-content: flex-start;
 }
 
-.dms-rcsEnV.da-dms .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ {
-	margin-left: 8px !important;
+.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ {
+    margin-left: 8px !important;
     margin-top: 8px !important;
 }
 
 .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ.unread-qLkInr::before {
-	left: -2px;
+    left: -2px;
     top: 5px;
     z-index:9000;
+}
+
+.guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:first-child {
+    position: relative;
+    margin: auto;
 }
 
 .dms-rcsEnV.da-dms .guildsWrapper-5TJh6A .guilds-1q_RqH .guild-1EfMGQ:first-child {
