--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -700,7 +700,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
-    background: var(--friends-icon);
+    background: var(--friends-icon) !important;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 100%;
