--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -733,3 +733,10 @@ div.unread-mentions-indicator-bottom {
 .theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
     background: transparent;
 }
+
+.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+    background: var(--friends-icon) !important;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: 100% !important;
+}
