--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -734,7 +734,7 @@ div.unread-mentions-indicator-bottom {
     background: transparent;
 }
 
-.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
+.guilds-1q_RqH > .guild-1EfMGQ > .guildInner-3DSoA4 {
     background: var(--friends-icon) !important;
     background-position: 50% 50%;
     background-repeat: no-repeat;
