--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -728,10 +728,9 @@ div.unread-mentions-indicator-bottom {
     border-radius: 25px !important;
 }
 
-/*
 .guilds-1q_RqH > .guild-1EfMGQ > .guildInner-3DSoA4 {
     background: var(--friends-icon) !important;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 100% !important;
-}*/
+}
