--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -354,7 +354,7 @@
 
 .theme-dark .message-group .comment .markup pre {
     background: rgba(0, 0, 0, 0.6);
-    border-color: #000;
+    border-color: var(--main-color);
 }
 
 .message-group .comment .markup pre {
@@ -364,7 +364,7 @@
 /* 07-2018 update */
 .theme-dark .markup-2BOw-j pre {
     background: rgba(0, 0, 0, 0.6);
-    border-color: #000;
+    border-color: var(--main-color);
     border-radius: 0;
 }
 
@@ -728,9 +728,37 @@ div.unread-mentions-indicator-bottom {
     border-radius: 25px !important;
 }
 
+.guild-1EfMGQ {
+    transition: .3s;
+}
+
+.guild-1EfMGQ:hover {
+    transform: scale(1.08);
+}
+
+.guild-1EfMGQ .guildIcon-CT-ZDq {
+    border-radius: 25px;
+}
+
 .guilds-1q_RqH > .guild-1EfMGQ > .guildInner-3DSoA4 {
     background: var(--friends-icon) !important;
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: 100% !important;
+}
+
+.theme-dark .body-SKIE6r {
+    background-color: rgba(0,0,0,.3);
+}
+
+.theme-dark .card-7JP0BX {
+    background-color: rgba(0,0,0,.3);
+}
+
+.theme-dark .header-1RC2Wb {
+    background-color: rgba(255,255,255,.1);
+}
+
+.article-FleDq5 {
+    background-color: rgba(0,0,0,.3);
 }
