--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -179,7 +179,7 @@
 
 .scroller-wrap .scroller::-webkit-scrollbar-thumb, .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
     background-clip: padding-box;
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--scroll-bar-color);
     border: 3px solid rgba(0, 0, 0, 0);
     border-radius: 7px;
 }
@@ -190,16 +190,16 @@
 }
 
 .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-thumb, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.15);
-    border-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--scroll-bar-color);
+    border-color: var(--scroll-bar-color);
 }
 
 .theme-dark .scrollerThemed-2oenus.themeGhostHairline-DBD-2d .scroller-2FKFPG::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--scroll-bar-color);
 }
 
 .scrollerThemed-2oenus.themeGhostHairlineChannels-3G0x9_ .scroller-2FKFPG::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--scroll-bar-color);
 }
 
 
@@ -303,7 +303,7 @@
 }
 
 .private-channels .channel:hover a {
-    background-color: rgba(255,255,255, .15);
+    background-color: var(--hover-list-bg-color);
     color: #fff;
 }
 
@@ -666,7 +666,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .messagesWrapper-3lZDfY .scroller-wrap ::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: var(--scroll-bar-color);
     border-color: rgba(54, 57, 63, 0);
 }
 
@@ -705,7 +705,7 @@ div.unread-mentions-indicator-bottom {
 
 .theme-dark .guild-1EfMGQ.unread-qLkInr:before {
     background: var(--main-color);
-    animation: var(--unread-server-animation);
+    animation: var(--unread-server-animation) 3s linear infinite;
 }
 
 @keyframes rainbow {
